<package format="2">
    <name>orbslam2_ros</name>
    <version>1.0.0</version>
    <description>
        ROS warpper for ORB-SLAM2
    </description>
    <maintainer email="chao@stealthtechnologies.com.au">Chao Zhang</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>tf</depend>
    <depend>roslib</depend>
    <depend>visualization_msgs</depend>
</package>

